corrected function with app.js file

--- a/output/team.html
+++ b/output/team.html
@@ -14,24 +14,29 @@
         <div class="container">
             <div class="row"><div class="col-6">
             <div class="card mx-auto mb-3" style="width: 18rem">
-            <h5 class="card-header">John Smith<br /><br />Intern</h5>
+            <h5 class="card-header">Claudia Chittim<br /><br />Engineer</h5>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 455</li>
+                <li class="list-group-item">ID: 7770</li>
+                <li class="list-group-item">Email Address: test@testing.com</li>
+                <li class="list-group-item">GitHub: c0y01202</li>
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">Dana Bisnov<br /><br />Intern</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 888-</li>
                 <li class="list-group-item">Email Address: test@testing.com</li>
                 <li class="list-group-item">School: MIT</li>
             </ul>
             </div>
         </div><div class="col-6">
             <div class="card mx-auto mb-3" style="width: 18rem">
-            <h5 class="card-header">Darcy Smith<br /><br />Manager</h5>
+            <h5 class="card-header">Stan Smith<br /><br />Manager</h5>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 677</li>
+                <li class="list-group-item">ID: 4404</li>
                 <li class="list-group-item">Email Address: test@testing.com</li>
-                <li class="list-group-item">Office Phone: 2222222222</li>
+                <li class="list-group-item">Office Phone: 888-888-8888</li>
             </ul>
             </div>
-        </div> </div>
-    </div>
-    
-</body>
-</html>
+        </div>
