added all team members to html output

--- a/output/team.html
+++ b/output/team.html
@@ -16,27 +16,49 @@
             <div class="card mx-auto mb-3" style="width: 18rem">
             <h5 class="card-header">Claudia Chittim<br /><br />Engineer</h5>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 7770</li>
+                <li class="list-group-item">ID: 7774</li>
                 <li class="list-group-item">Email Address: test@testing.com</li>
                 <li class="list-group-item">GitHub: c0y01202</li>
             </ul>
             </div>
         </div><div class="col-6">
             <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">Stan Smith<br /><br />Engineer</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 8880</li>
+                <li class="list-group-item">Email Address: test@test.com</li>
+                <li class="list-group-item">GitHub: unknown</li>
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
             <h5 class="card-header">Dana Bisnov<br /><br />Intern</h5>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 888-</li>
+                <li class="list-group-item">ID: 5550</li>
                 <li class="list-group-item">Email Address: test@testing.com</li>
-                <li class="list-group-item">School: MIT</li>
+                <li class="list-group-item">School: University of Texas at Austin</li>
             </ul>
             </div>
         </div><div class="col-6">
             <div class="card mx-auto mb-3" style="width: 18rem">
             <h5 class="card-header">Stan Smith<br /><br />Manager</h5>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 4404</li>
-                <li class="list-group-item">Email Address: test@testing.com</li>
+                <li class="list-group-item">ID: 8880</li>
+                <li class="list-group-item">Email Address: testing@test.com</li>
                 <li class="list-group-item">Office Phone: 888-888-8888</li>
             </ul>
             </div>
-        </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">Claudia Chittim<br /><br />Manager</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 9990</li>
+                <li class="list-group-item">Email Address: testingalot@testing.cim</li>
+                <li class="list-group-item">Office Phone: 999-999=99999</li>
+            </ul>
+            </div>
+        </div> </div>
+    </div>
+    
+</body>
+</html>
